@@ -1,0 +1,1 @@
+libqgis-gui{QGIS_ABI}: no-symbols-control-file
