@@ -1,0 +1,1 @@
+libqgis-networkanalysis{QGIS_ABI}: no-symbols-control-file
