@@ -1,0 +1,1 @@
+libqgisgrass{QGIS_ABI}: no-symbols-control-file
