@@ -1,0 +1,1 @@
+libqgispython{QGIS_ABI}: no-symbols-control-file
