@@ -1,0 +1,1 @@
+libqgissqlanyconnection{QGIS_ABI}: no-symbols-control-file
