@@ -1,0 +1,2 @@
+qgis-providers-common: privacy-breach-generic
+qgis-providers-common: extra-license-file
