@@ -1,2 +1,0 @@
-qgis-sqlanywhere: package-name-doesnt-match-sonames
-qgis-sqlanywhere: no-symbols-control-file
